# lab-audio

./: About.md  Distortion.md  MainRoadmap.md  Makefile  OSCLearn.md  ProjectHome.md  Promethee.md  README  TODO  autogen.sh  configure.ac  labaudio.md  libthc.md  lv2.md  lv2osctype.md  lv2sdk.md  turntable.md
libclowidget/: Makefile.am
libclowidget/po/: Makefile.in
libclowidget/src/: Makefile.am
libs/libdsp/: configure.in
libs/libdsp/dsp/: Envelop.hh  VariNoise.hh  iOsc.hh
libs/libdsp/src/: Envelop.cpp  iFilter.cc  varinoise.cc
libs/libkbdz/src/: Makefile  Makefile.am  Makefile.in  evdev_input.cpp  evdev_input.hh  iInput.cpp  iInput.hh  iOutput.cpp  kconfevent.hh  kevent.hh  kmain.cpp  lfringbuffer.cpp  test_kbdz.cpp  test_lfrb.cpp  thread.cpp  thread.hpp
libs/libthc/src/: CloSlider.cpp  Makefile.am  cairoutils.cc  cairoutils.h  ithcwidget.h  modemanager.cc  oscmanager.h  param.cc  shapereditor.cpp  skin.cc  skin.h  skinmanager.cc  skinmanager.h  slider.cc  slider.h  thc.h  thcwidget.cc  thcwidget.h  thcwidget.hxx  waveview.h  widget.h
libs/libthc/tests/: Makefile.am  main.cc
progs/patate/src/: Envelop.cpp  Envelop.hh  Makefile.am  Sample.hh  drumseq.cpp  drumseqview.cpp  drumseqview.hh  drumsynth.cc  drumsynth.hh  event.hh  foncteurs.hpp  iFilter.cc  iFilter.hh  iSynth.hh  lv2-midifunctions.h  lv2Manager.cc  midicontroller.cc  midicontroller.hh  noise.cc  noise.hh  patate.cpp  patate.hh  patate_gui.cpp  patate_gui.hh  sampler.cpp  sampler.hh  synth_manager.cc  synth_manager.hh  synthview_generic.cc  synthview_generic.hh  thread.hpp  varinoise.cc
progs/patate/src/generic/: debug.hh  singleton.hh
progs/patate/src/gtktmp/: roll_view.cc  roll_view.hh
progs/patate/src/rt/: lfringbuffer.hh  pool.cc  pool.hh  smp_uint.hh  test_pool.cc
progs/patate/src/seq/: Makefile.am  Sequence.cc  Sequence.hh  event.cc  event.hh  event_bus.cc  event_bus.hh  iSynth.hh  part.cc  part.hh  seq.cc  seq.hh  test_position.cc  timer.cc  timer.hh  transport.cc  transport.hh
progs/patate/src/widgets/: Makefile  Makefile.am  kbd_view.cc  kbd_view.hh  main.cc  roll_view.cc  roll_view.hh
progs/wefedit/: configure  configure.in
progs/wefedit/src/: main.cc  main_win.cc  main_win.hh  wef_win.cc  wef_win.hh  wefview.cc  wefview.hh
trunk/libs/libdsp/src/: Makefile.am  iOsc.cc  noise.cc  varinoise.cc
trunk/libs/libkbdz/src/: Makefile  Makefile.am  Makefile.in  aseq_output.cpp  aseq_output.hh  evdev_input.cpp  foncteurs.hpp  iInput.hh  iOutput.hh  kmain.hh  mapping.cpp  mapping.hh  thread.cpp
trunk/libs/libthc/: Makefile.am  README  TODO  config.h.in  configure.in
trunk/libs/libthc/clowidget/: CloExpander.h  CloPlugin.h
trunk/libs/libthc/include/: widget.h
trunk/libs/libthc/skins/: Makefile.am  ctaf-skin.xml  ttoine-skin.xml
trunk/libs/libthc/src/: Makefile.am  cairoutils.cc  cairoutils.h  envelopeeditor.cpp  inputmanager.h  ithcwidget.h  modemanager.h  oscmanager.cc  param.h  skin.cc  skin.h  skinmanager.cc  skinmanager.h  slider.cc  slider.h  thc.h  thcwidget.cc  thcwidget.h  thcwidget.hxx  waveview.cc  waveview.h  widget.h  widgetmanager.h
trunk/libs/libthc/tests/: Makefile.am  back-lol.xpm  main.cc
trunk/libs/libthc/wip/waveview/: main.cc  waveview.cc
trunk/libs/libthc/wip/waview/: Makefile  WaView.cc  main.cc
trunk/libs/libthc/xml/: ctaf-skin.xml
trunk/plugins/: Makefile.am  TODO  configure.ac
trunk/plugins/10test/: 10tau.hh  10tau.peg  10tau.ttl  10tau_gtk.hh
trunk/plugins/atropos/: AnalogFilter.hpp  Makefile  README  Track.cpp  Track.hpp  atropos  atropos.hpp  atropos.ttl  atropos_gtk.cpp  atropos_gtk.hpp  manifest.ttl  thc-atropos.xml  tthell.pl  tthellfile
trunk/plugins/butinator/: Makefile  butinator  butinator.cpp  butinator.ttl  playlist_model.h
trunk/plugins/cigue/: Makefile  cigue.cpp  cigue.hpp  cigue.peg  cigue.ttl  cigue_gtk.cpp  cigue_gtk.hpp  lv2-gtk2gui.h  tthellfile
trunk/plugins/delay/: adelay.cpp  adelay.peg
trunk/plugins/flagorneur/: lv2plugin.hpp  playlist_model.cpp  tracklist.ttl
trunk/plugins/sampler/: Envelop.cc  Envelop.cpp  Envelop.hh  Makefile  Sample.cc  Sample.cpp  Sample.hh  TODO  filter.hh  manifest.ttl  promethee  promethee.cpp  promethee.hh  promethee.peg  promethee.ttl  promethee_gtk.cpp  promethee_gtk.hh  tthellfile
trunk/plugins/sekrym/src/: manifest.ttl  outbus.hh  pattern.cc  pattern.hh  sekrym.cc  sekrym.hh  sequence.hh
trunk/plugins/soulrider/: Makefile  beatsmasher.cpp  beatsmasher.h  ffmpeginterface.cpp  ffmpeginterface.h  manifest.ttl  sndbuffer.cpp  soulrider.cpp  soulrider.peg  soulrider.ttl  soulrider_gtk.cpp  soundmap.h  turntable.cpp  turntable_gtk.cpp
trunk/plugins/tracklist/: Makefile  README  lv2-program-gtk2gui.h  lv2gtk2gui.hpp  manifest.ttl  tracklist.cpp  tracklist.peg
trunk/plugins/tronsonator/: Makefile  README  back-lol.xpm  crossfader_curve.cpp  crossfader_curve.hpp  launch.sh  manifest.ttl  tronsonator  tronsonator.cpp  tronsonator.ttl  tronsonator_gtk.cpp
trunk/plugins/turntable/: Makefile  TODO  ffmpeginterface.h  lv2gtk2gui.cpp  lv2gtk2gui.hpp  manifest.ttl  myplugin.peg  myplugin.ttl  myplugin_gtk.cpp  turntable.cpp  turntable.peg  turntable.ttl  turntable_gtk.cpp
trunk/progs/patate/: MIDI  Makefile.am  NEWS  TODO  configure.in  drumseq.hh  dsvn  patate.hh
trunk/progs/patate/src/: Envelop.cpp  Makefile.am  Sample.cpp  Sample.hh  drumseq.hh  drumseqview.cpp  drumseqview.hh  drumsynth.hh  dsp_config.h  event.hh  iFilter.cc  iFilter.hh  lv2Manager.cc  lv2Manager.hh  main.cpp  midicontroller.cc  midicontroller.hh  noise.cc  noise.hh  noise_test.cc  patate.cpp  patate.hh  patate_gui.cpp  patate_gui.hh  sampler.cpp  synth_manager.cc  synth_manager.hh  test_lv2.cc  varinoise.cc  varinoise.hh
trunk/progs/patate/src/gtktmp/: main.cc  roll_view.hh
trunk/progs/patate/src/rt/: lfringbuffer.cpp  pool.hh
trunk/progs/patate/src/seq/: Makefile.am  Sequence.cc  Sequence.hh  event.hh  event_bus.cc  event_bus.hh  iSynth.hh  part.cc  part.hh  seq.hh  timer.cc  timer.hh  transport.cc  transport.hh
trunk/progs/wefedit/src/: Makefile.am  main_win.cc  wef_win.cc  wef_win.hh  wefview.cc
(+282 files in other folders)
