AC_PREREQ(2.59)
AC_INIT([lab-audio],[svn],[ctaf42@gmail.com])
AM_INIT_AUTOMAKE

#AC_CONFIG_SUBDIRS([10test])
#AC_CONFIG_SUBDIRS([sampler])
#AC_CONFIG_SUBDIRS([soulrider])
#AC_CONFIG_SUBDIRS([tronsonator])
#AC_CONFIG_SUBDIRS([butinator])
#AC_CONFIG_SUBDIRS([sekrym])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT

