dnl Process this file with autoconf to produce a configure script.
dnl Created by Anjuta application wizard.

AC_INIT(configure.in)
AM_INIT_AUTOMAKE(libthc, 0.1)
AM_CONFIG_HEADER(config.h)
AM_MAINTAINER_MODE

AC_ISC_POSIX
AC_PROG_CC
AC_PROG_CPP
AC_PROG_CXX
AM_PROG_CC_STDC
AC_HEADER_STDC



dnl Set gettext package name
GETTEXT_PACKAGE=libthc
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE", [GETTEXT package name])

dnl Add the languages which your application supports here.
ALL_LINGUAS=""
AM_GLIB_GNU_GETTEXT



AM_PROG_LIBTOOL



PKG_CHECK_MODULES(PACKAGE, [gtkmm-2.4 libglademm-2.4 libxml++-2.6 sigc++-2.0])
AC_SUBST(PACKAGE_CFLAGS)
AC_SUBST(PACKAGE_LIBS)




AC_OUTPUT([
Makefile
src/Makefile
po/Makefile.in
tests/Makefile
])
