dnl autoconf script for Zia httpd server
dnl process with autoconf in order to get configure script
dnl or use autogen.sh (recommended)

AC_INIT(configure.in)
AM_INIT_AUTOMAKE(patate, 0.1.8)
AM_PROG_LIBTOOL

AM_MAINTAINER_MODE

AC_ISC_POSIX
AC_PROG_CC
AC_PROG_CXXCPP
AC_PROG_CXX
AC_PROG_MAKE_SET

AM_PROG_CC_STDC

AC_PROG_INSTALL

dnl We need to write some rules to check stl classes.
dnl    pthreads, libxml++ (or embbed it into src tree)

#AC_CHECK_HEADERS([pthread.h, semaphore.h])
#AC_CHECK_HEADERS([iostream, vector, list])

# Check for debugging flag
debug="no"
AC_ARG_ENABLE(debug,
	[AS_HELP_STRING(--enable-debug, [Enable debugging (false)])],
	[debug="$enableval"])
if test "$debug" = "yes"; then
  CFLAGS="-O0 -g -Wall -DDEBUG"
  CXXFLAGS="-O0 -g -Wall -DDEBUG"
else
  CFLAGS="$CFLAGS -DNDEBUG"
  CXXFLAGS="$CFLAGS -DNDEBUG"
fi


PKG_CHECK_MODULES(PKG, [gtkmm-2.4 jack sndfile libslv2])
AC_SUBST(PKG_CFLAGS)
AC_SUBST(PKG_LIBS)

PKG_CHECK_MODULES(SIGC, [sigc++-2.0])
AC_SUBST(SIGC_CFLAGS)
AC_SUBST(SIGC_LIBS)

dnl libxml++ checks
#PKG_CHECK_MODULES(LIBXML, libxml++-2.6 >= 2.10.0)
#AC_SUBST(LIBXML_CFLAGS)
#AC_SUBST(LIBXML_LIBS)


dnl Autoheader things :p


AC_OUTPUT([
Makefile
src/Makefile
src/seq/Makefile
src/rt/Makefile
src/widgets/Makefile
])
